--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
-   <groupId>com.sebi.projectgroup</groupId>
-   <artifactId>sebihrms</artifactId>
+   <groupId>com.sebi.devops</groupId>
+   <artifactId>sebihrmssample</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
       <maven.compiler.source>11</maven.compiler.source>
